--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,19 @@
     <groupId>cn.edu.whut.sept</groupId>
     <artifactId>zuul</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <distributionManagement>
+        <repository>
+            <id>nexus-releases</id>
+            <name>Nexus Release Repository</name>
+            <url>https://repo.wecash.net/repository/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>https://repo.wecash.net/repository/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
