--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <distributionManagement>
         <repository>
             <id>nexus-releases</id>
-            <name>Nexus Release Repository</name>
+            <name>TestAction</name>
             <url>https://repo.wecash.net/repository/releases/</url>
         </repository>
         <snapshotRepository>
