--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -3,14 +3,12 @@ name: Release Drafter
 on:
   push:
     branches:
-      - master # 在 master 分支发生更新时执行此 action
+      - master
 
 jobs:
-  draft_release:
-    name: Draft release
+  update_release_draft:
     runs-on: ubuntu-latest
     steps:
-      - uses: toolmantim/release-drafter@v5.2.0
-        name: Draft
+      - uses: release-drafter/release-drafter@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
