--- a/.github/workflows/upload-to-release.yml
+++ b/.github/workflows/upload-to-release.yml
@@ -11,12 +11,12 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build Docker image
-        uses: actions/docker/cli@master
+        uses: actions/Githubgsy427/TestAction@master
         with:
           args: build . -t my-image
 
       - name: Save the image
-        uses: actions/TestAction@master
+        uses: actions/Githubgsy427/TestAction@master
         with:
           args: save my-image:latest
 
